Changes in quota-tools from 3.15 to 3.16
* print more verbose list of compile options when --version specified (Jan Kara)
* quotaon(8) should work only on local filesystems (Ladislav Michnovic)
* made possible to use quota rpc in mixed NFSv3 and NFSv4 environments (Jan Kara) 
* fixed compilation with openLDAP library versions 2.1 and 2.2 (Jan Kara)
* always define allow_severity and deny_severity for older versions of libwrap (Martin Jacobs)
* cleaned up host_access() handling (Jan Kara)
* configure script now correctly reports checking of libwrap (Jan Kara)
* added MPFS to the list of supported filesystems (Dave Boone)
* all binaries are now stripped during installation (Jan Kara)
* updated Polish translations (Jakub Bogusz)
* fixed typo in a quotaon message (Jakub Bogusz)
* fixed warnquota to check URI only if LDAP enabled (Michael Meskes)

Changes in quota-tools from 3.14 to 3.15
* added a wrapper script around setquota which also updates LDAP (Stefan Adams)
* implemented quota netlink daemon to listen to kernel netlink messages and send them
  to DBUS and / or write them to the console (Jan Kara)
* modified configure scripts and warnquota to check for new LDAP library and allow use of URI (Jan Kara)
* fix LDAP scripts to set VISUAL instead of EDITOR (Michael Meskes)
* added ext4 filesystem to the list of supported filesystems (Jan Kara)
* pot.o is now compiled with CFLAGS (Ladislav Michnovic)
* use -fPIE for compilation when available (Jan Kara, Ladislav Michnovic)
* fixed some more problems XFS quotaon (Kouta Ooizumi, Jan Kara)
* fixed two mistakes in quotaon(8) manpage (Utako Kusaka)
* added option -A to quota(1) to report all NFS mountpoints (Jan Kara)
* fixed XFS handling to work with loopback mounted devices (Jan Kara)
* fixed mountpoints scanning to make XFS -x delete command work (Jan Kara)
* fixes of signed vs unsigned int issues (Jan Kara)
* fixed a format string bug in reporting of raw grace times in repquota (Jan Kara)